[Fullscreen control] Add timeout for cursor triggered exit UI

Some users complain that the fullscreen exit UI (FAB X) doesn't go away
when they move their cursor to the top of the screen. This is a common
scenario where people play video or present slides and they just want
to keep their cursor on the top.

To fix this use case, this CL adds a 3s timeout to the exit UI. After
the UI times out, the user needs to move the cursor away from the
buffer area then move it back to the top to re-trigger the UI.

Bug: 835223
Change-Id: I43a652d83ffb539a89f9a0bcb81987c62d439edf
Reviewed-on: https://chromium-review.googlesource.com/1033483
Commit-Queue: Yuwei Huang <yuweih@chromium.org>
Reviewed-by: Robert Liao <robliao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555241}
Former-commit-id: faa9754ca738373e93a1fd42c830d8e48232d127