chrome/browser/ui/views/fullscreen_control/fullscreen_control_view.cc
@@ -29,7 +29,6 @@ namespace {
 const SkColor kBackgroundColor = SkColorSetARGB(0xcc, 0x28, 0x2c, 0x32);
 
 constexpr int kCloseIconSize = 24;
-constexpr int kCircleButtonDiameter = 48;
 
 class CloseFullscreenButton : public views::Button {
  public:
@@ -51,7 +50,7 @@ class CloseFullscreenButton : public views::Button {
     flags.setAntiAlias(true);
     flags.setColor(kBackgroundColor);
     flags.setStyle(cc::PaintFlags::kFill_Style);
-    float radius = kCircleButtonDiameter / 2.0f;
+    float radius = FullscreenControlView::kCircleButtonDiameter / 2.0f;
     canvas->DrawCircle(gfx::PointF(radius, radius), radius, flags);
   }
 
